AddHandler, FCGIWrapper and RemoveHandler directives not related to PHP versions Virtualmin knows about are not touched when changing PHP settings.
Limits on the number of processes and amount of RAM and CPU time a process can use can be defined for each virtual server. These apply to CGI and PHP scripts, and when the domain owner logs in via SSH. They are particularly useful for preventing fork bombs and other intentional or accidental denial of service attacks.
When a script has dependencies, all are checked and reported at once rather than being displayed one at a time. This makes complex applications like Rails easier to setup.
When scheduled backups are sent to their domain owners as well, each owner only receives the backup messages related to the domains they own.
Added script installers for Trac and MoinMoin, contributed by Jannis Leidel.
---- Changes since 3.57 ----
Mailbox users' passwords are now shown in a separate popup window, rather than on the Edit Mailbox page where anyone can see them.
Updated the SugarCRM installer to 5.0.0e, ZenPhoto to 1.1.6, and Piwik to 0.2.1.
Modified the 'View website via Webmin' feature to not munge offsite links, only those to the same domain.
The number of email messages delivered per minute and the number classified as spam or viruses can now be graphed on the System Statistics page.
Added links from the Status section of the System Information page to the Webmin modules for their particular servers, and additional stats where available.
If a migrated domain needs features that are not supported by the system, a warning message is displayed.
All new SSL certificate and key files how have 700 permissions, so that only the domain owner and Apache (which starts as root) can read them.
All Virtualmin command-line and remote API programs now participate in Webmin logging, so their invocation and changes can be viewed in the Webmin Actions Log module.